--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
 
     <div class="category">
         <ul>
-            <li id="storeMenu" onclick="getData('basket')">
+            <li onclick="getData('basket')">
                 <img src="./img/basket.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 식품
             </li>
-            <li id="carparkMenu" onclick="getData('note')">
+            <li onclick="getData('note')">
                 <img src="./img/note.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 학원
             </li>
-            <li id="coffeeMenu" onclick="getData('hospital')">
+            <li onclick="getData('hospital')">
                 <img src="./img/hospital.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 의료
             </li>
-            <li id="coffeeMenu" onclick="getData('hair')">
+            <li onclick="getData('hair')">
                 <img src="./img/hair.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 미용원
             </li>
-            <li id="coffeeMenu" onclick="getData('restaurant')">
+            <li onclick="getData('restaurant')">
                 <img src="./img/restaurant.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 식당
             </li>
