--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         .category .ico_carpark {background-position:-10px -72px;}
         .category .ico_store2 {margin:0;background:url('/static/img/basket.png') no-repeat;}
     </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="고재성" />
+    <meta name="description" content="Y페이-맵 : 용인 지역화폐 사용처를 카테고리 별로 알려주는 서비스입니다." />
+    <meta name="keywords" content="경기화폐, 와이페이, 용인" />
+    <meta property="og:title" content="Y페이-맵" />
+    <meta property="og:description" content="Y페이-맵 : 용인 지역화폐 사용처를 카테고리 별로 알려주는 서비스입니다." />
+    <meta property="og:image" content="./img/ypay_logo.png" />
+    <meta property="og:url" content="https://ypay.map/" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 <div id="mapwrap">
@@ -28,23 +39,23 @@
 
     <div class="category">
         <ul>
-            <li onclick="getData('basket')">
+            <li id="storeMenu" onclick="getData('basket')">
                 <img src="./img/basket.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 식품
             </li>
-            <li onclick="getData('note')">
+            <li id="carparkMenu" onclick="getData('note')">
                 <img src="./img/note.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 학원
             </li>
-            <li onclick="getData('hospital')">
+            <li id="coffeeMenu" onclick="getData('hospital')">
                 <img src="./img/hospital.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 의료
             </li>
-            <li onclick="getData('hair')">
+            <li id="coffeeMenu" onclick="getData('hair')">
                 <img src="./img/hair.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 미용원
             </li>
-            <li onclick="getData('restaurant')">
+            <li id="coffeeMenu" onclick="getData('restaurant')">
                 <img src="./img/restaurant.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 식당
             </li>
@@ -52,7 +63,7 @@
     </div>
 </div>
 <!-- services와 clusterer, drawing 라이브러리 불러오기 -->
-<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=cd7842b1f0e77ad39555e1b61bf917bf&libraries=services,clusterer,drawing"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cd7842b1f0e77ad39555e1b61bf917bf&libraries=services,clusterer,drawing"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
 <script>
 
