현위치 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         #mapwrap{position:relative;overflow:hidden;}
         .category, .category *{margin:0;padding:0;color:#000;}
         .logo {position:absolute;overflow:hidden;top:10px;left:10px;z-index:10;border:1px solid black;font-family:'Malgun Gothic','맑은 고딕',sans-serif;font-size:12px;text-align:center;background-color:#fff;}
-        .category {position:absolute;overflow:hidden;top:10px;left:80px;width:250px;height:50px;z-index:10;border:1px solid black;font-family:'Malgun Gothic','맑은 고딕',sans-serif;font-size:12px;text-align:center;background-color:#fff;}
+        .category {position:absolute;overflow:hidden;top:10px;left:80px;width:300px;height:50px;z-index:10;border:1px solid black;font-family:'Malgun Gothic','맑은 고딕',sans-serif;font-size:12px;text-align:center;background-color:#fff;}
         .category .menu_selected {background:#FF5F4A;color:#fff;border-left:1px solid #915B2F;border-right:1px solid #915B2F;margin:0 -1px;}
         .category li{list-style:none;float:left;width:50px;height:45px;padding-top:5px;cursor:pointer;}
         .category .ico_comm {display:block;margin:0 auto 2px;width:22px;height:26px;background:url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/category.png') no-repeat;}
@@ -39,23 +39,27 @@
 
     <div class="category">
         <ul>
-            <li id="storeMenu" onclick="getData('basket')">
+            <li onclick="getCurrentLocation()">
+                <img src="./img/location.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
+                현위치
+            </li>
+            <li onclick="getData('basket')">
                 <img src="./img/basket.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 식품
             </li>
-            <li id="carparkMenu" onclick="getData('note')">
+            <li onclick="getData('note')">
                 <img src="./img/note.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 학원
             </li>
-            <li id="coffeeMenu" onclick="getData('hospital')">
+            <li onclick="getData('hospital')">
                 <img src="./img/hospital.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 의료
             </li>
-            <li id="coffeeMenu" onclick="getData('hair')">
+            <li onclick="getData('hair')">
                 <img src="./img/hair.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 미용원
             </li>
-            <li id="coffeeMenu" onclick="getData('restaurant')">
+            <li onclick="getData('restaurant')">
                 <img src="./img/restaurant.png" style="display:block;margin:0 auto 2px;width:22px;height:26px;">
                 식당
             </li>
@@ -82,20 +86,23 @@
     var markers = []; // 마커를 담을 배열입니다
     var ypay_places = [];
 
+    getCurrentLocation();
 
-    // HTML5의 geolocation으로 사용할 수 있는지 확인합니다
-    if (navigator.geolocation) {
-        // GeoLocation을 이용해서 접속 위치를 얻어옵니다
-        navigator.geolocation.getCurrentPosition(function(position) {
-            var lat = position.coords.latitude, // 위도
-                lon = position.coords.longitude; // 경도
-            var locPosition = new kakao.maps.LatLng(lat, lon); // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
-            // 지도 중심좌표를 접속위치로 변경합니다
-            map.setCenter(locPosition);
-        });
 
+    function getCurrentLocation(){
+        // HTML5의 geolocation으로 사용할 수 있는지 확인합니다
+        if (navigator.geolocation) {
+            // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+            navigator.geolocation.getCurrentPosition(function(position) {
+                var lat = position.coords.latitude, // 위도
+                    lon = position.coords.longitude; // 경도
+                var locPosition = new kakao.maps.LatLng(lat, lon); // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+                // 지도 중심좌표를 접속위치로 변경합니다
+                map.setCenter(locPosition);
+            });
+
+        }
     }
-
 
     function removeMarker() {
         for ( var i = 0; i < markers.length; i++ ) {
