--- a/index.html
+++ b/index.html
@@ -7,15 +7,38 @@
         #mapwrap{position:relative;overflow:hidden;}
         .category, .category *{margin:0;padding:0;color:#000;}
         .logo {position:absolute;overflow:hidden;top:10px;left:7px;z-index:10;border:1px solid black;font-family:'Malgun Gothic','맑은 고딕',sans-serif;font-size:12px;text-align:center;background-color:#fff;}
-        .bottom {position:absolute;overflow:hidden;right:10px;bottom:20px;z-index:10;border:1px solid black;font-family:'Malgun Gothic','맑은 고딕',sans-serif;font-size:12px;text-align:center;background-color:#fff;}
+        .bottom {position:absolute;overflow:hidden;right:15px;bottom:35px;z-index:10;border:1px solid black;font-family:'Malgun Gothic','맑은 고딕',sans-serif;font-size:12px;text-align:center;background-color:#fff;}
         .category {position:absolute;overflow:hidden;top:10px;left:60px;width:250px;height:50px;z-index:10;border:1px solid black;font-family:'Malgun Gothic','맑은 고딕',sans-serif;font-size:12px;text-align:center;background-color:#fff;}
         .category .menu_selected {background:#FF5F4A;color:#fff;border-left:1px solid #915B2F;border-right:1px solid #915B2F;margin:0 -1px;}
         .category li{list-style:none;float:left;width:50px;height:45px;padding-top:5px;cursor:pointer;}
-        .category .ico_comm {display:block;margin:0 auto 2px;width:22px;height:26px;background:url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/category.png') no-repeat;}
-        .category .ico_coffee {background-position:-10px 0;}
-        .category .ico_store {background-position:-10px -36px;}
-        .category .ico_carpark {background-position:-10px -72px;}
-        .category .ico_store2 {margin:0;background:url('/static/img/basket.png') no-repeat;}
+        .loading {
+            background: rgba(0, 0, 0, .5) no-repeat;
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 999;
+            display: none;
+        }
+
+        .spinner {
+            display: inline-block;
+            height: 28px;
+            width: 28px;
+            position: absolute;
+            top: calc(50% - 14px);
+            left: calc(50% - 14px);
+            animation: rotate 0.8s infinite linear;
+            border: 4px solid #fff;
+            border-right-color: transparent;
+            border-radius: 50%;
+        }
+
+        @keyframes rotate {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -68,11 +91,13 @@
         </ul>
     </div>
 </div>
+<div id="loading" class="loading">
+    <div class="spinner"></div>
+</div>
 <!-- services와 clusterer, drawing 라이브러리 불러오기 -->
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cd7842b1f0e77ad39555e1b61bf917bf&libraries=services,clusterer,drawing"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
 <script>
-
 
     var mapContainer = document.getElementById('map'), // 지도를 표시할 div
         mapOption = {
@@ -87,6 +112,8 @@
 
     var markers = []; // 마커를 담을 배열입니다
     var ypay_places = [];
+
+    var $loading = $('.loading');
 
     getCurrentLocation();
 
@@ -118,6 +145,8 @@
 
 
     function getData(category) {
+        $loading.show();
+
         // 지도에 표시되고 있는 마커를 제거합니다
         removeMarker();
 
@@ -138,6 +167,8 @@
             $.each(ypay_places, function (i, ypay_place) {
                 displayPlaces(ypay_place);
             });
+
+            $loading.hide();
         });
 
     }
