--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="고재성, kojaesung@gmail.com" />
     <meta name="description" content="Y페이-맵 : 용인 지역화폐 사용처를 카테고리 별로 알려주는 서비스입니다." />
-    <meta name="keywords" content="경기화폐, 와이페이, 용인" />
+    <meta name="keywords" content="경기화폐, 와이페이, 용인, 지역화폐, y페이, ypay" />
     <meta property="og:title" content="Y페이-맵" />
     <meta property="og:description" content="Y페이-맵 : 용인 지역화폐 사용처를 카테고리 별로 알려주는 서비스입니다." />
     <meta property="og:image" content="./img/ypay_logo.png" />
-    <meta property="og:url" content="https://ypay.map/" />
+    <meta property="og:url" content="https://y-pay.site/" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 </head>
@@ -212,7 +212,7 @@
     }
 
     function savePlaces(item) {
-        // console.log("====== savePlaces : " +item.REFINE_WGS84_LAT  + ", " + item.REFINE_WGS84_LOGT + ", " + item.CMPNM_NM);
+        console.log("====== savePlaces : " +item.REFINE_WGS84_LAT  + ", " + item.REFINE_WGS84_LOGT + ", " + item.CMPNM_NM);
         ypay_places.push({
             position : new kakao.maps.LatLng(item.REFINE_WGS84_LAT, item.REFINE_WGS84_LOGT),
             CMPNM_NM : item.CMPNM_NM,
